--- a/index.html
+++ b/index.html
@@ -1,92 +1,136 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>DDVC - Singapore Polytechnic</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-
+<html lang="en">
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/style.css">
+<script src="js/script.js"></script>
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+.fa-anchor,.fa-coffee {font-size:200px}
+</style>
 <body>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-    <!-- Header & Navbar -->
-    <div class="w3-top w3-bar w3-black">
-        <div class="w3-bar w3-padding w3-card">
-            <img src="images/logo.svg" />
-            <div class="w3-right">
-                <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large "
-                    href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i
-                        class="fa fa-bars"></i></a>
 
-                <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small "><strong>About
-                        Us</strong></a>
-                <a href="#contact"
-                    class="w3-bar-item w3-button w3-padding-large w3-hide-small "><strong>DDVC</strong></a>
-                <a href="#tour"
-                    class="w3-bar-item w3-button w3-padding-large w3-hide-small "><strong>Admission</strong></a>
-                <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small "><strong>Student
-                        Services</strong></a>
-                <a href="#contactus" class="w3-bar-item w3-button w3-padding-large w3-hide-small "><strong>Contact
-                        Us</strong></a>
-                <button class="w3-btn w3-round-large w3-button w3-red button-apply-now w3-hide-small">Apply Now</button>
-            </div>
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-black w3-card w3-left-align w3-large">
+    <div class="w3-bar w3-padding w3-card">
+        <img src="images/logo.svg" />
+        <div class="w3-right">
+            <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large "
+                href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i
+                    class="fa fa-bars"></i></a>
+
+                    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small "><strong>About Us</strong></a>
+                    <a href="#contact"class="w3-bar-item w3-button w3-padding-large w3-hide-small "><strong>DDVC</strong></a>
+                    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small "><strong>Admission</strong></a>
+                    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small "><strong>Student Services</strong></a>
+                    <a href="#contactus" class="w3-bar-item w3-button w3-padding-large w3-hide-small "><strong>Contact Us</strong></a>
+                    <button class="w3-btn w3-round-large w3-button w3-red button-apply-now w3-hide-small">Apply Now</button>
         </div>
     </div>
+  </div>
 
-    <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-    <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large "><strong>About Us</strong></a>
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large "><strong>DDVC</strong></a>
-        <a href="#tour" class="w3-bar-item w3-button w3-padding-large"><strong>Admission</strong></a>
-        <a href="#band" class="w3-bar-item w3-button w3-padding-large"><strong>Student Services</strong></a>
-        <a href="#contactus" class="w3-bar-item w3-button w3-padding-large"><strong>Contact Us</strong></a>
-        <button class="w3-btn w3-round-large w3-button w3-red button-apply-now">Apply Now</button>
+  <!-- Navbar on small screens -->
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large"><strong>About Us</strong></a>
+    <a href="#contact"class="w3-bar-item w3-button w3-padding-large"><strong>DDVC</strong></a>
+    <a href="#tour" class="w3-bar-item w3-button w3-padding-large"><strong>Admission</strong></a>
+    <a href="#band" class="w3-bar-item w3-button w3-padding-large"><strong>Student Services</strong></a>
+    <a href="#contactus" class="w3-bar-item w3-button w3-padding-large"><strong>Contact Us</strong></a>
+    <button class="w3-btn w3-round-large w3-button w3-red button-apply-now">Apply Now</button>
+  </div>
+</div>
+
+<!-- Header -->
+<header class="w3-red w3-center">
+    <div class="w3-display-container" style="height: 500px;">
+        <img class="mySlides" src="images/home_slide_image_1.jpeg" style="display: block; width: 100%; height: 100%;">
+        <img class="mySlides" src="images/home_slide_image_2.jpeg">
+        <img class="mySlides" src="images/home_slide_image_3.jpeg">
+        <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+          <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+          <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+          <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+          <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+          <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+        </div>
+      </div>
+</header>
+<!-- Divider -->
+<div class="w3-black w3-center" style="padding: 10px;">
+    <h1>Seeing is believing watch the video</h1>
+</div>
+
+<!-- First Grid -->
+<div class="w3-row-padding w3-padding-32 w3-container">
+  <div class="w3-content">
+    <div class="w3-twothird">
+      <h1>Lorem Ipsum</h1>
+      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+
+      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
 
-    <div class="w3-container">
-        <p>A car is a wheeled, self-powered motor vehicle used for transportation.</p>
-        <p>A car is a wheeled, self-powered motor vehicle used for transportation.</p>
-        <p>A car is a wheeled, self-powered motor vehicle used for transportation.</p>
+    <div class="w3-third w3-center">
+      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+    </div>
+  </div>
+</div>
+
+<!-- Second Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
     </div>
 
-    <!-- Footer -->
-    <footer class="w3-container w3-black" style="padding:32px">
-        <div class="w3-row">
-            <div class="w3-third w3-container">
-                <img src="images/logo.svg" />
-            </div>
-            <div class="w3-third w3-container">
-                <h2>w3-third</h2>
-            </div>
-            <div class="w3-third w3-container">
-                <h2>w3-third</h2>
-            </div>
-    </footer>
+    <div class="w3-twothird">
+      <h1>Lorem Ipsum</h1>
+      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
 
-    <script>
-        // Used to toggle the menu on small screens when clicking on the menu button
-        function myFunction() {
-            var x = document.getElementById("navDemo");
-            if (x.className.indexOf("w3-show") == -1) {
-                x.className += " w3-show";
-            } else {
-                x.className = x.className.replace(" w3-show", "");
-            }
-        }
-    </script>
+      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+  </div>
+</div>
+
+<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+    <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity">  
+  <div class="w3-xlarge w3-padding-32">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+ </div>
+ <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
+<script>
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+  var x = document.getElementById("navDemo");
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+  } else { 
+    x.className = x.className.replace(" w3-show", "");
+  }
+}
+</script>
 
 </body>
-
 </html>
