--- a/sample.html
+++ b/sample.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>W3.CSS Template</title>
+<title>Singapore polytechnic</title>
 <meta charset="UTF-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/style.css">
 <script src="js/script.js"></script>
 <style>
@@ -24,11 +25,6 @@
     h1,
     button {
         font-family: "Montserrat", sans-serif
-    }
-
-    .fa-anchor,
-    .fa-coffee {
-        font-size: 200px
     }
 </style>
 
@@ -72,47 +68,124 @@
     </div>
 
     <!-- Header -->
-    <header class="w3-red w3-center">
-        <div class="w3-display-container" style="height: 500px;">
-            <img class="mySlides" src="images/home_slide_image_1.jpeg"
-                style="display: block; width: 100%; height: 100%;">
+    <header class="w3-center">
+        <div style="height: 700px;">
+            <img class="mySlides" src="images/home_slide_image_1.jpeg" style="display: block; width: 100%; height: 100%; opacity: 0.8;">
             <img class="mySlides" src="images/home_slide_image_2.jpeg">
             <img class="mySlides" src="images/home_slide_image_3.jpeg">
-            <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle"
-                style="width:100%">
-                <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-                <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-                <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-                <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-                <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+            <div class="w3-center w3-display-container w3-large w3-text-white" style="width:100%; top: -20px;">
+                <div class="w3-display-left w3-third w3-left w3-hover-text-grey" onclick="plusDivs(-1,'mySlides','demo')">
+                    <span style="float: left; padding-left: 20px;">
+                        <i class="fa fa-chevron-left"></i>
+                    </span>
+                </div>
+                <div class="w3-display-right w3-third w3-right w3-hover-text-grey" onclick="plusDivs(1,'mySlides','demo')">
+                    <span style="float: right; padding-right: 20px;">
+                        <span class="w3-badge demo w3-border w3-transparent w3-hover-white"
+                            onclick="currentDiv(1,'mySlides')"></span>
+                        <span class="w3-badge demo w3-border w3-transparent w3-hover-white"
+                            onclick="currentDiv(2,'mySlides')"></span>
+                        <span class="w3-badge demo w3-border w3-transparent w3-hover-white"
+                            onclick="currentDiv(3,'mySlides')"></span>
+                        <i class="fa fa-chevron-right"></i></span>
+                </div>
+                <div class="w3-display-middle w3-third w3-center ca3-container">
+                    <div id="ca3-video-background"><i class="fa fa-circle"></i></div>
+                    <div id="ca3-video"><i class="fa fa-play-circle w3-text-black"></i></div>
+                </div>
             </div>
+
         </div>
     </header>
     <!-- Divider -->
-    <div class="w3-black w3-center" style="padding: 10px;">
-        <p>Seeing is believing watch the video</p>
-    </div>
-
-    <!-- First Grid -->
-    <div class="w3-row-padding w3-padding-32 w3-container">
-        <div class="w3-center">
-            <h1><b>WHY SP</b></h1>
-            <h5 class="w3-padding-16"><b>The Rumours are true!! SP is pretty awesome place to be in. We are giving you
-                    12 reasons why? </b></h5>
-
-            <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <div class="w3-black w3-center w3-cell-row ca3-divider-text">
+        <div class="w3-cell">
+            <hr>
+        </div>
+        <div class="w3-cell">
+            <p>SEEING IS BELIEVING WATCH THIS VIDEO</p>
+        </div>
+        <div class="w3-cell">
+            <hr>
         </div>
     </div>
+    <!-- First Grid -->
+        <div class="w3-center">
+            <div class="w3-light-grey w3-container w3-padding-32">
+                <h1><b>WHY SP</b></h1>
+                <h5 class="w3-padding-16" style="text-transform: uppercase; letter-spacing: 3px;">The Rumours are true!!
+                    SP is pretty awesome place to be in. We are giving you
+                    12 reasons why?</h5>
+                <div class="w3-row-padding w3-margin w3-display-container">
+                    <div class="w3-display-left w3-hover-text-grey" onclick="plusDivs(-1,'ca3-dimond')">
+                        <i class="fa fa-chevron-left"></i>
+                    </div>
+                    <div class="w3-content ca3-dimond" style="display: block;">
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Broaden Your Horizon</div>
+                        </div>
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Diverse Diploma Courses</div>
+                        </div>
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Discover the perks of learning</div>
+                        </div>
+                    </div>
+                    <div class="w3-content ca3-dimond">
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Lorem ipsum Lorem ipsum Lorem ipsum </div>
+                        </div>
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Lorem ipsum Lorem ipsum Lorem ipsum </div>
+                        </div>
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Lorem ipsum Lorem ipsum Lorem ipsum </div>
+                        </div>
+                    </div>
+                    <div class="w3-content ca3-dimond">
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Lorem ipsum dolor sit amet</div>
+                        </div>
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Lorem ipsum dolor sit amet</div>
+                        </div>
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Lorem ipsum dolor sit amet</div>
+                        </div>
+                    </div>
+                    <div class="w3-content ca3-dimond">
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Curabitur vel turpis a arcu dignissim tempor</div>
+                        </div>
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Curabitur vel turpis a arcu dignissim tempor</div>
+                        </div>
+                        <div class="w3-third w3-display-container">
+                            <img src="images/dimond.png" style="width:100%">
+                            <div class="w3-display-middle w3-large ca3-dimond-text">Curabitur vel turpis a arcu dignissim tempor</div>
+                        </div>
+                    </div>
+                    <div class="w3-display-right w3-hover-text-grey" onclick="plusDivs(1,'ca3-dimond')">
+                        <i class="fa fa-chevron-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <!-- Divider -->
-    <div class="w3-black w3-center" style="padding: 10px;">
-        <p><b>SP TESTIMONIOL</b></p>
+    <div class="w3-black w3-center ca3-divider-text">
+        <p>SP TESTIMONIOL</p>
     </div>
 
     <!-- Second Grid -->
@@ -218,7 +291,7 @@
                                     </div>
 
 
-                                    <button class="w3-button w3-block w3-dark-grey">+ Connect</button>
+                                    <button class="w3-button w3-block w3-dark-grey">Read More</button>
 
                                 </div>
                             </div>
@@ -295,11 +368,16 @@
             <a href="#band" class="w3-bar-item">Student Services</a><br>
             <a href="#contactus" class="w3-bar-item">Contact Us</a><br>
         </div>
-        <div class="w3-third w3-left w3-padding-64">
-            <span style="font-size: 1.5em;" class="w3-padding-small"><i class="fa fa-facebook w3-hover-opacity"></i></span>
-            <span style="font-size: 1.5em;" class="w3-padding-small"><i class="fa fa-instagram w3-hover-opacity"></i></span>
-            <span style="font-size: 1.5em;" class="w3-padding-small"><i class="fa fa-twitter w3-hover-opacity"></i></span>
-            <span style="font-size: 1.5em;" class="w3-padding-small"><i class="fa fa-linkedin w3-hover-opacity"></i></span>
+        <div class="w3-third w3-right w3-padding-64">
+            Follow SP:<br>
+            <span style="font-size: 1.5em;" class="w3-padding-small"><i
+                    class="fa fa-facebook w3-hover-opacity"></i></span>
+            <span style="font-size: 1.5em;" class="w3-padding-small"><i
+                    class="fa fa-instagram w3-hover-opacity"></i></span>
+            <span style="font-size: 1.5em;" class="w3-padding-small"><i
+                    class="fa fa-twitter w3-hover-opacity"></i></span>
+            <span style="font-size: 1.5em;" class="w3-padding-small"><i
+                    class="fa fa-linkedin w3-hover-opacity"></i></span>
         </div>
     </footer>
 
